# beam_robotics

./: .gitmodules  .travis.yml  README.md
calibration/: CMakeLists.txt  README.md  calibration_log.txt  package.xml
calibration/2018_05_Results/faro_scan_measurements/: convert_faro_measurements_to_yaml_2018_03_21.m  convert_faro_measurements_to_yaml_2018_03_21_2.m  convert_faro_measurements_to_yaml_2018_05_31.m
calibration/2018_05_Results/faro_scan_measurements/2018_03_20_scan/: T_base_hvlp.txt  T_hvlp_gps.txt  T_hvlp_imu.txt  T_hvlp_vvlp.txt  T_hvlp_vvlp_measured.txt  T_hvlp_ximea.txt
calibration/2018_05_Results/faro_scan_measurements/results/: 2018_03_20.yaml  2018_03_21.yaml  2018_05_31.yaml
calibration/2018_05_Results/flir_Intrinsics/main_code/: flirCalib.m
calibration/2018_05_Results/flir_Intrinsics/results/: 2018_04_05_flir_calibration.txt
calibration/2018_05_Results/stereo_calibration/: README.txt
calibration/2018_05_Results/stereo_calibration/functions/: flirCompliment.m  flirHisteq.m  ximeaResize.m
calibration/2018_05_Results/stereo_calibration/main_code/: stereoCalib.m
calibration/2018_05_Results/ximea_calibration/: README.txt
calibration/2018_05_Results/ximea_calibration/main_code/: ximeaCalib.m
calibration/2018_12_Results/IMU1_Intrinsics/: results_summary_20181214.txt
calibration/2018_12_Results/IMU2_Intrinsics/: ig_calib_IMU2_converted.mat  results_summary_20181220.txt
calibration/2018_12_Results/matlab/: Hand_Measurements_2018_12.m
calibration/calibration_publisher/: CMakeLists.txt  package.xml
calibration/calibration_publisher/launch/: calibration_publisher.launch  calibration_publisher_ig.launch  calibration_publisher_ig2.launch  calibration_publisher_kaarta.launch  calibration_publisher_kaarta_stencil_pro.launch  calibration_publisher_lvi_sam.launch  calibration_publisher_pierre.launch  calibration_publisher_roben.launch
calibration/calibration_publisher/src/: calibration_publisher_node.cpp
calibration/calibration_util/: CMakeLists.txt  README.md  package.xml
calibration/calibration_util/src/: calibration_publisher_node.cpp
calibration/calibration_util/test/: test_calibration_util.cpp  test_lidar_util.cpp
calibration/calibration_util/test_data/: measurement_test.txt  readTransform.txt  readTransformList_test.yaml  read_camera_matrix.yaml
calibration/kalibr/: README.md  run_kalibr.sh
calibration/launch/: calibration_publisher.launch
calibration/manual_cam_lidar_calib/: CMakeLists.txt  README.md  package.xml
calibration/manual_cam_lidar_calib/src/: LC_calibrater.cpp  main.cpp
calibration/results/: calibration_log.txt  package.xml
calibration/velodyne_h_v_calib/: CMakeLists.txt  README.rst  package.xml
calibration/velodyne_h_v_calib/calibrations/: 2018_08_13_testing.yaml
calibration/velodyne_h_v_calib/config/: rqt_ez_pub_config.yaml  velodyne_h_v_calib_config.rviz
calibration/velodyne_h_v_calib/data/: 2018_12_20.yaml  2021_10_14.yaml
calibration/velodyne_h_v_calib/launch/: velodyne_h_v_calib.launch  velodyne_h_v_calib_2.launch  velodyne_h_v_calib_OLD.launch
calibration/velodyne_h_v_calib/msg/: VelodyneTF.msg
calibration/velodyne_h_v_calib/src/: velodyne_h_v_calib.cpp  velodyne_h_v_calib_2.cpp
inspection_tools/inspection/: CMakeLists.txt  README.md  package.xml
inspection_tools/inspection/config/: ExtractUndistortedImages.json  ImageExtractorConfig.json  ImageLabelerConfig.json  MapLabeler.json  MapLabelerConfig.json  QuantifyDefectsConfig.json
inspection_tools/inspection/src/: AutoInspection.cpp  CalibrateCameraToMap.cpp  ColorMap.cpp  ExtractDefectClouds.cpp  ExtractImages.cpp  LabelDefects.cpp  LabelImages.cpp  LabelMap.cpp  LadybugLabeler_main.cpp  ManualInspectionA.cpp  ManualInspectionB.cpp  MapLabeler_output_clouds.cpp  MapLabeller_main.cpp  OdomTopicToPosesFile.cpp  QuantifyDefects.cpp  ViewAndFilterImages.cpp  odom_topic_to_poses_file.cpp
inspection_tools/inspection/tools/: ReorganizeExtrinsics.cpp  view_and_filter_images.py  view_image_list.py
inspection_tools/lidar_trajectory_validation/: CMakeLists.txt  package.xml
inspection_tools/lidar_trajectory_validation/config/: config.json
inspection_tools/lidar_trajectory_validation/src/: RunTrajectoryValidation.cpp
inspection_tools/rosbag_tools/: CMakeLists.txt  README.md  package.xml
inspection_tools/rosbag_tools/src/: OffsetMessageTimestampsMain.cpp  PoseStampedToOdometry.cpp  ProcessBag.cpp  UnpackVelodyneScans.cpp  UnpackVelodyneScansMain.cpp
inspection_tools/unpack_velodyne_scans/: CMakeLists.txt  README.md  package.xml
inspection_tools/unpack_velodyne_scans/src/: UnpackVelodyneScans.cpp  main.cpp
map_processing/unpack_velodyne_scans/: CMakeLists.txt  README.md  package.xml
map_processing/unpack_velodyne_scans/src/: UnpackVelodyneScans.cpp  main.cpp
mapping/map_quality/: CMakeLists.txt  config.json  package.xml
mapping/map_quality/src/: MapQuality.cpp  run_map_quality_analysis.cpp  tests.cpp
mapping/map_quality/tools/: filter_results.py  plot_statistics.py  run_cc_map_quality.py
mapping/sfm/: CMakeLists.txt  README.md  package.xml
mapping/sfm/src/: ExtractImageFeatures.cpp  main.cpp
mapping/visualize_feature_tracks/: CMakeLists.txt  README.md  nodelets.xml  package.xml
mapping/visualize_feature_tracks/launch/: track_features.launch
mapping/visualize_feature_tracks/src/: feature_tracker.cpp  node.cpp  nodelet.cpp  tracker_node.cpp  tracker_nodelet.cpp
relocalization/: CMakeLists.txt  README.md  package.xml
relocalization/config/: build_db_config.json  database_config.json
relocalization/include/: GlobalMatcher.h  ImageDatabase.h  ImageSimilaritySearch.h  ImageToImage.h
relocalization/src/: BuildImageDB.cpp  CMUDatasetEval.cpp  ImageDatabase.cpp  debug.cpp  find_similar_images.cpp
relocalization/src/lib/: ImageDatabase.cpp  ImageSimilaritySearch.cpp  ImageToImage.cpp
templates/example_package_nodelet/: CMakeLists.txt  README.md  package.xml
templates/example_package_nodelet/src/: example_package_node.cpp  example_package_nodelet.cpp
templates/example_package_nodelet/test/: ExampleClass_test.cpp
(+277 files in other folders)
