<?xml version="1.0"?>
<package format="2">
    <name>relocalization</name>
    <version>1.0.0</version>
    <description>Package for performing camera relocalization</description>
    <author email="jfmclaug@uwaterloo.ca">Jake McLaughlin</author>
    <maintainer email="jfmclaug@uwaterloo.ca">Jake McLaughlin</maintainer>
    <license>Beam Robotics Proprietary</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>dbow3</build_depend>
    <build_depend>libbeam</build_depend>

</package>
