<?xml version="1.0"?>
<package>
  <name>calibration_publisher</name>
  <version>1.0.0</version>
  <description>The calibration_publisher package</description>

  <author email="yhj.ser@gmail.com">Avery Jung</author>
  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="nick@beamrobotics.io">Nick Charron</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>libbeam</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>std_msgs</run_depend>
  <!-- <depend>sensor_msgs</depend> -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
