<?xml version="1.0"?>
<package>
  <name>calibration_publisher</name>
  <version>1.0.0</version>
  <description>The calibration_publisher package</description>

  <author email="yhj.ser@gmail.com">Avery Jung</author>
  <maintainer email="nicholas.c.charron@gmail.com">Nick Charron</maintainer>
  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>libbeam</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
