<?xml version="1.0"?>
<package>
  <name>calibration_util</name>
  <version>1.0.0</version>
  <description>The calibration_util package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="nbedi@uwaterloo.ca">Nicholash Bedi</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>libbeam</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>message_filters</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
