<?xml version="1.0"?>
<package format="2">
  <name>calibration_util</name>
  <version>1.0.0</version>
  <description>The calibration_util package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="nbedi@uwaterloo.ca">Nicholash Bedi</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>libbeam</build_depend>
  
  <depend>roslib</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend> 
  <depend>tf2</depend>
  <depend>tf2_2d</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
