<package format="2">
  <name>manual_cam_lidar_calib</name>
  <version>0.1.0</version>
  <description>manual_cam_lidar_calib</description>

  <maintainer email="nick@beamrobotics.io">Nick Charron</maintainer>

  <license>BEAM Proprietary</license>

  <!-- This file lets catkin build this non-catkin package-->
  <!-- <buildtool_depend>catkin</buildtool_depend> -->
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
