<?xml version="1.0"?>
<package format="2">
    <name>inspection</name>
    <version>1.0.0</version>
    <description>Package for performing robot inspections</description>
    <author email="nick@beamrobotics.io">Nick Charron</author>
    <maintainer email="steve.phillips@uwaterloo.ca">Steve Phillips</maintainer>
    <license>Beam Robotics Proprietary</license>

    <buildtool_depend>catkin</buildtool_depend>

    <!--<depend>eigen</depend>-->
    <!--<depend>boost</depend>-->
    <build_depend>libbeam</build_depend>
    <depend>roscpp</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>tf</depend>
    <depend>rosbag_tools</depend>

</package>
