<?xml version="1.0"?>
<package format="2">
  <name>rosbag_tools</name>
  <version>1.0.0</version>
  <description>
    This package contains some c++ tools for performing tasks on rosbags
  </description>
  <author email="adthoms@uwaterloo.ca">Alex Thoms</author>
  <maintainer email="adthoms@uwaterloo.ca">Alex Thoms</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>libbeam</build_depend>
  <build_depend>velodyne_pointcloud</build_depend>
  <exec_depend>velodyne_pointcloud</exec_depend>
  <depend>roscpp</depend>
  <depend>rosbag</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
</package>
