<?xml version="1.0"?>
<package format="2">
  <name>unpack_velodyne_scans</name>
  <version>1.0.0</version>
  <description>
    unpack velodyne_msgs/VelodyneScan messages into sensor_msgs::PointCloud2
		messages contained within velodyne scan udp packets.
  </description>
  <author email="adthoms@uwaterloo.com">Alex Thoms</author>
  <maintainer email="adthoms@uwaterloo.ca">Alex Thoms</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rosbag</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
</package>
