<?xml version="1.0"?>
<package format="2">
    <name>sfm</name>
    <version>1.0.0</version>
    <description>Tools for running SfM</description>
    <author email="nick@beamrobotics.io">Nick Charron</author>
    <maintainer email="nick@beamrobotics.io">Nick Charron</maintainer>
    <license>Beam Robotics Proprietary</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>libbeam</build_depend>

</package>
